# qt-creator-sticky-scroll

./: CMakeLists.txt  README.md  StickyScroll.json.in  stickyscroll.cpp  stickyscrollconstants.h  stickyscrolltr.h
.github/workflows/: build_cmake.yml
resources/translations/: StickyScroll_cs.ts  StickyScroll_da.ts  StickyScroll_de.ts  StickyScroll_en.ts  StickyScroll_fr.ts  StickyScroll_hr.ts  StickyScroll_ja.ts  StickyScroll_pl.ts  StickyScroll_ru.ts  StickyScroll_sl.ts  StickyScroll_sv.ts  StickyScroll_uk.ts  StickyScroll_zh_CN.ts  StickyScroll_zh_TW.ts
sources/: bracescopemodel.cpp  bracescopemodel.hpp  foldingscanner.cpp  foldingscanner.hpp  indentationscopemodel.cpp  indentationscopemodel.hpp  markdownscopemodel.cpp  markdownscopemodel.hpp  panellayout.hpp  panelstateengine.hpp  scanutil.cpp  scanutil.hpp  scopemodel.hpp  scopemodels.hpp  scoperesolver.hpp  stickyscroll.cpp  stickyscrollsettings.cpp  stickyscrollsettings.hpp  stickyscrolltr.hpp  stickyscrolltypes.hpp  stickyscrollwidget.cpp  stickyscrollwidget.hpp  symbolindex.cpp  symbolindex.hpp  symbolsynccontroller.cpp  symbolsynccontroller.hpp
tests/: stickyscrolltest.cpp  stickyscrolltest.hpp
